refactor: cleaned up schemas
